# python-boilerplate

./: .gitignore  .pre-commit-config.yaml  .python-version  .renovaterc.json  .renovaterc.json5  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  pr.yml
src/myapplication/: main.py
src/python_boilerplate/: main.py
tests/: test_myapplication.py  test_python_boilerplate.py
