[project]
name = "python-boilerplate"
version = "0.1.0"
description = "Python boilerplate"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Samuel MARLHENS", email = "samuel.marlhens@proton.me" },
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
homepage = "https://github.com/smarlhens/python-boilerplate#readme"
repository = "https://github.com/smarlhens/python-boilerplate"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "mypy>=2.1.0",
  "bandit>=1.9.4",
  "ruff>=0.15.16",
  "ty>=0.0.47",
]

[tool.uv]
required-version = ">=0.11.13"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
  "__pycache__",
  "build",
  "dist",
]
target-version = "py314"
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
  "C4",
  "D200",
  "D201",
  "D204",
  "D205",
  "D206",
  "D210",
  "D211",
  "D213",
  "D300",
  "D400",
  "D402",
  "D403",
  "D404",
  "D419",
  "E",
  "F",
  "FURB",
  "G010",
  "I",
  "INP001",
  "N805",
  "PERF101",
  "PERF102",
  "PERF401",
  "PERF402",
  "PGH004",
  "PGH005",
  "PIE794",
  "PIE796",
  "PIE807",
  "PIE810",
  "PLC",
  "PLR",
  "RET502",
  "RET503",
  "RET504",
  "RET505",
  "RUF015",
  "RUF032",
  "RUF033",
  "RUF034",
  "RUF037",
  "RUF041",
  "RUF043",
  "RUF046",
  "RUF057",
  "RUF059",
  "RUF060",
  "RUF061",
  "RUF064",
  "RUF100",
  "RUF102",
  "RUF103",
  "RUF104",
  "S101",
  "T20",
  "UP",
  "W",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.mypy]
files = ["src", "tests"]
strict = "true"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
# strict profile: every diagnostic ty exposes at "error" severity
# Each rule whose default severity is "warn" or "ignore" is promoted to "error".
ambiguous-protocol-member = "error"
deprecated = "error"
ignore-comment-unknown-rule = "error"
ineffective-final = "error"
invalid-enum-member-annotation = "error"
invalid-ignore-comment = "error"
invalid-legacy-positional-parameter = "error"
invalid-named-tuple-override = "error"
mismatched-type-name = "error"
possibly-missing-implicit-call = "error"
possibly-missing-submodule = "error"
redundant-cast = "error"
redundant-final-classvar = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-awaitable = "error"
unused-ignore-comment = "error"
unused-type-ignore-comment = "error"
useless-overload-body = "error"
division-by-zero = "error"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
unsupported-dynamic-base = "error"
